--- a/practice01/src/main/resources/templates/login.html
+++ b/practice01/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div id="login-form">
-    <div id="login-title">Log into Select Shop</div>
+    <div id="login-title">Login Page</div>
     <!-- REST 키 필요 -->
     <button id="login-kakao-btn" onclick="location.href='https://kauth.kakao.com/oauth/authorize?client_id=f11b21e1360ec6e6abe846cd32e6423d&redirect_uri=http://localhost:8080/user/kakao/callback&response_type=code'">
         카카오로 로그인하기
