--- a/practice01/src/main/resources/templates/signup.html
+++ b/practice01/src/main/resources/templates/signup.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 <div id="login-form">
-    <div id="login-title">Sign up Select Shop</div>
+    <div id="login-title">Sign up Page</div>
 
     <form action="/user/signup" method="post">
         <div class="login-id-label">Username</div>
